# media_of_transcoder

./: .gitignore  LICENSE  README.md  help.txt  main.py  pyproject.toml
apps/: media_app.py
settings/: setting_audio.py  setting_video.py
tests/: test_settings.py  test_utils.py
utils/: check_file_exist.py  install_ffmpeg.py  validations.py
