[tool.poetry]
name = "convert_for_media"
version = "1.0.0"
description = "script to automate media conversion"
authors = ["Hp2501 <herbetyp@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
autopep8 = "^1.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
